2008-01-26  Philip Withnall  <pwithnall@svn.gnome.org>

	Update svn:ignore properties.

============ Version 2.21.91

2008-01-25  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* configure.in: 2.21.91

2008-01-25  Bastien Nocera  <hadess@hadess.net>

	* data/totem.schemas.in:
	* data/totem.ui:
	* src/plugins/screensaver/totem-screensaver.c:
	(totem_screensaver_update_from_state),
	(lock_screensaver_on_audio_changed_cb), (impl_activate),
	(impl_deactivate):
	* src/totem-preferences.c: (checkbutton4_toggled_cb),
	(lock_screensaver_on_audio_changed_cb), (totem_setup_preferences):
	Lock the screensaver when only audio is playing, but allow the
	user to override that, to avoid monitor-powered speakers being
	turned off

	Based on patch by Patrick Hulin <patrick.hulin@gmail.com>

	(Closes: #481080)

2008-01-21  Bastien Nocera  <hadess@hadess.net>

	Patch from Patrick Hulin <patrick.hulin@gmail.com>

	* src/totem-object.c: (totem_object_class_init),
	(totem_object_set_property), (totem_object_get_property):
	Add current-mrl property which gets/sets the current MRL
	that Totem is playing

	* configure.in:
	* src/plugins/thumbnail/*: Add the thumbnail plugin to show
	the currently playing file's thumbnail as the window icon
	(Closes: #407513)

2008-01-18  Bastien Nocera  <hadess@hadess.net>

	* data/desktop.sh:
	* data/mime-functions.sh:
	* data/mime-type-include.sh:
	* data/mime-type-list.txt: Add support for the new
	x-content/ types, fix FLAC being missing from the
	audio types, allow comments to be added to the
	mime-types list (Closes: #510323)

2008-01-17  Bastien Nocera  <hadess@hadess.net>

	* Makefile.am: Add license_change to the tarballs
	(Closes: #510241)

2008-01-16  Frederic Crozat  <fcrozat@mandriva.com>

	* src/plugins/media-player-keys/totem-media-player-keys.c:
	Do not popup error only if gnome-settings-daemon was not
	running (Really closes #509438).

2008-01-15  Bastien Nocera  <hadess@hadess.net>
