@@ -2,8 +2,8 @@
 Module=tracker
 IAge=1
 Builtin=false
-_Name=Video Search
-_Description=Search for videos using Tracker
+_Name=Local Search
+_Description=Search for local videos using Tracker
 Authors=Javier Goday
 Copyright=Copyright © 2007 Javier Goday
 Website=http://www.gnome.org/projects/totem/
